--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ django-cors-headers==2.5.3
 django-dotenv==1.4.2
 django-extensions==2.1.6
 django-filter==2.1.0
+django-js-asset==1.2.2
+django-mptt==0.10.0
 django-storages==1.7.1
 django-workers==0.1.3
 djangorestframework==3.9.3
@@ -20,6 +22,7 @@ drf-tracking==1.5.0
 facebook-sdk==3.1.0
 factory-boy==2.11.1
 Faker==1.0.5
+feedparser==5.2.1
 google-auth==1.6.3
 google-auth-oauthlib==0.3.0
 gunicorn==19.9.0
